# fern-lang

./: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt  README.md  cmake_process.py
.cache/clangd/index/: main.cpp.E24B91582080F7B0.idx
lib/asm/: .notes.txt.swp  notes.txt  syntax.txt
lib/flasm/: syntax.txt
lib/flasm/include/: flasm.h
lib/parse/: syntax.txt
src/: main.cpp
